src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__assign_to_shadowed_later.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/assign_to_shadowed_later.lox
---
inner
assigned
