src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__close_over_function_parameter.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/close_over_function_parameter.lox
---
param
