src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__closed_closure_in_function.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/closed_closure_in_function.lox
---
local
