src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__nested_closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/nested_closure.lox
---
a
b
c
