src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__open_closure_in_function.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/open_closure_in_function.lox
---
local
