src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__reference_closure_multiple_times.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/reference_closure_multiple_times.lox
---
a
a
