src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__reuse_closure_slot.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/reuse_closure_slot.lox
---
a
