src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__shadow_closure_with_local.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/shadow_closure_with_local.lox
---
closure
shadow
closure
