src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__unused_closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/unused_closure.lox
---
ok
