src/interpreter/snapshots/rlox__interpreter__tests__interpreter@closure__unused_later_closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/closure/unused_later_closure.lox
---
a
